add productDTO for crud in admin dashboard

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "UserAppCon": "Server=HOANGANH;Database=demo_1;User Id=sa;Password=01012001;TrustServerCertificate=true"
+    "UserAppCon": "Server=HOANGANH;Database=Demo_2;User Id=sa;Password=01012001;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
