--- a/appsettings.json
+++ b/appsettings.json
@@ -11,6 +11,11 @@
   "Jwt": {
     "Secret": "my_super_secret_key_1234567890"
   },
+  "Email": {
+    "Sender": "anh.nguyen49@ntq-solution.com.vn",
+    "Password": "owpk qeqw fnoj tlgz",
+    "Smtp": "smtp.gmail.com"
+  },
   "StoredHash": "scretstoredhash@12345",
   "AllowedHosts": "*"
 }
