--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "UserAppCon": "Server=HOANGANH;Database=Demo_2;User Id=sa;Password=01012001;TrustServerCertificate=true"
+    "UserAppCon": "Server=HOANGANH;Database=Demo_3;User Id=sa;Password=01012001;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
@@ -15,6 +15,12 @@
     "Sender": "anh.nguyen49@ntq-solution.com.vn",
     "Password": "owpk qeqw fnoj tlgz",
     "Smtp": "smtp.gmail.com"
+  },
+  "Vnpay": {
+    "TmnCode": "8M1E79QS",
+    "HashSecret": "PMNWYOJCIG2YHK5Q5OY7M1J9TDE5GLC8",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "ReturnUrl": "https://localhost:7089/api/pay/confirm"
   },
   "StoredHash": "scretstoredhash@12345",
   "AllowedHosts": "*"
