--- a/backend.csproj
+++ b/backend.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.28.1" />
+    <PackageReference Include="VNPAY.NET" Version="6.2.0" />
   </ItemGroup>
 
 </Project>
