todo: save cart in session

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "UserAppCon": "Server=HOANGANH;Database=Demo_3;User Id=sa;Password=01012001;TrustServerCertificate=true"
+    "UserAppCon": "Server=HOANGANH\\MAYAO;Database=Demo_3;User Id=sa;Password=01012001;TrustServerCertificate=true;MultipleActiveResultSets=True;"
   },
   "Logging": {
     "LogLevel": {
