create upload image api

--- a/appsettings.json
+++ b/appsettings.json
@@ -22,6 +22,11 @@
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
     "ReturnUrl": "https://localhost:7089/api/pay/confirm"
   },
+  "CloudinarySettings": {
+    "CloudName": "debzsmbac",
+    "ApiKey": "531313578811374",
+    "ApiSecret": "GkPnOcrCCdL34uIsTQJQORjfahM"
+  },
   "StoredHash": "scretstoredhash@12345",
   "AllowedHosts": "*"
 }
